--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<h1>HI</h1>
+<h1>Hello World</h1>
 <B>A big Texas hello to Starbucks!!</B>
-<div style="color: blue";><p>This is github</p></div>
+<div style="color: blue";><p>This is a Github test</p></div>
+<div style="color: green";><p>What is wrong with this</p></div>
